Added -j | -jvmopts for Eclipse launchers.